# anil-kumar-website

./: LICENSE  README.md  app.py  database.py  pyproject.toml
static/: script.js  style.css
templates/: home.html
