[tool.poetry]
name = "repl-nix-anil-kumar-website"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]
readme = "README.md"
packages = [{include = "repl_nix_anil_kumar_website"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.3.3"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
